@@ -1,5 +1,8 @@
 ---------------------------------------------------------------------------
 Version 1.20.2 (rgerhards), 2007-12-??
+- code cleanup
+- enhanced $IncludeConfig directive to support wildcard filenames
+- changed some multithreading synchronization
 ---------------------------------------------------------------------------
 Version 1.20.1 (rgerhards), 2007-12-12
 - corrected a debug setting that survived release. Caused TCP connections
